Change pool MP CPU count.

--- a/notebooks/prototype_data_proc_rings.ipynb
+++ b/notebooks/prototype_data_proc_rings.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "1dbc0429-af20-4de2-8f68-cad5db16f2a0",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "ffe04088-e27d-404b-8333-d48a373ab622",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 201/201 [00:08<00:00, 22.94it/s]\n"
+      "100%|██████████| 201/201 [00:00<00:00, 585.83it/s]\n"
      ]
     },
     {
@@ -183,9 +183,9 @@
      "output_type": "stream",
      "text": [
       "Expanding datetime field...\n",
-      "0.52m to process log files.\n",
-      "CPU times: user 54.3 s, sys: 5.98 s, total: 1min\n",
-      "Wall time: 1min 2s\n"
+      "0.09m to process log files.\n",
+      "CPU times: user 1.03 s, sys: 209 ms, total: 1.24 s\n",
+      "Wall time: 5.43 s\n"
      ]
     }
    ],
@@ -197,17 +197,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "098b7106-26d0-40f9-9f89-a89312614735",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ip</th>\n",
+       "      <th>identd</th>\n",
+       "      <th>userid</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>request</th>\n",
+       "      <th>status</th>\n",
+       "      <th>size</th>\n",
+       "      <th>referer</th>\n",
+       "      <th>user_agent</th>\n",
+       "      <th>date</th>\n",
+       "      <th>month_year</th>\n",
+       "      <th>DOW</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>log_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1314</th>\n",
+       "      <td>2.152.103.57</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-11-27 16:31:05+00:00</td>\n",
+       "      <td>GET /opus/__api/image/thumb/co-iss-n1363912382...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>747</td>\n",
+       "      <td>https://opus.pds-rings.seti.org/opus/</td>\n",
+       "      <td>Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:9...</td>\n",
+       "      <td>2021-11-27</td>\n",
+       "      <td>11-2021</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>16</td>\n",
+       "      <td>tools</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>104</th>\n",
+       "      <td>208.115.199.22</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-11-28 09:56:06+00:00</td>\n",
+       "      <td>HEAD / HTTP/1.1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>5083</td>\n",
+       "      <td>https://tools.pds-rings.seti.org</td>\n",
+       "      <td>Mozilla/5.0+(compatible; UptimeRobot/2.0; http...</td>\n",
+       "      <td>2021-11-28</td>\n",
+       "      <td>11-2021</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>9</td>\n",
+       "      <td>tools</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>23.250.19.242</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2022-02-09 23:52:15+00:00</td>\n",
+       "      <td>\\n</td>\n",
+       "      <td>400</td>\n",
+       "      <td>5240</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2022-02-09</td>\n",
+       "      <td>02-2022</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>23</td>\n",
+       "      <td>tools</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2049</th>\n",
+       "      <td>208.115.199.22</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-11-27 04:21:17+00:00</td>\n",
+       "      <td>HEAD / HTTP/1.1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>5083</td>\n",
+       "      <td>https://opus.pds-rings.seti.org</td>\n",
+       "      <td>Mozilla/5.0+(compatible; UptimeRobot/2.0; http...</td>\n",
+       "      <td>2021-11-27</td>\n",
+       "      <td>11-2021</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>4</td>\n",
+       "      <td>tools</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1568</th>\n",
+       "      <td>107.126.40.131</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2021-11-30 18:09:24+00:00</td>\n",
+       "      <td>GET /downloads/pdsrms-2021-11-30T10-09-21-0636...</td>\n",
+       "      <td>200</td>\n",
+       "      <td>3197821</td>\n",
+       "      <td>https://opus.pds-rings.seti.org/opus/</td>\n",
+       "      <td>Mozilla/5.0 (Windows NT 10.0; Win64; x64) Appl...</td>\n",
+       "      <td>2021-11-30</td>\n",
+       "      <td>11-2021</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>18</td>\n",
+       "      <td>tools</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  ip identd userid                  datetime  \\\n",
+       "1314    2.152.103.57   None   None 2021-11-27 16:31:05+00:00   \n",
+       "104   208.115.199.22   None   None 2021-11-28 09:56:06+00:00   \n",
+       "52     23.250.19.242   None   None 2022-02-09 23:52:15+00:00   \n",
+       "2049  208.115.199.22   None   None 2021-11-27 04:21:17+00:00   \n",
+       "1568  107.126.40.131   None   None 2021-11-30 18:09:24+00:00   \n",
+       "\n",
+       "                                                request  status     size  \\\n",
+       "1314  GET /opus/__api/image/thumb/co-iss-n1363912382...     200      747   \n",
+       "104                                     HEAD / HTTP/1.1     200     5083   \n",
+       "52                                                   \\n     400     5240   \n",
+       "2049                                    HEAD / HTTP/1.1     200     5083   \n",
+       "1568  GET /downloads/pdsrms-2021-11-30T10-09-21-0636...     200  3197821   \n",
+       "\n",
+       "                                    referer  \\\n",
+       "1314  https://opus.pds-rings.seti.org/opus/   \n",
+       "104        https://tools.pds-rings.seti.org   \n",
+       "52                                     None   \n",
+       "2049        https://opus.pds-rings.seti.org   \n",
+       "1568  https://opus.pds-rings.seti.org/opus/   \n",
+       "\n",
+       "                                             user_agent        date  \\\n",
+       "1314  Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:9...  2021-11-27   \n",
+       "104   Mozilla/5.0+(compatible; UptimeRobot/2.0; http...  2021-11-28   \n",
+       "52                                                 None  2022-02-09   \n",
+       "2049  Mozilla/5.0+(compatible; UptimeRobot/2.0; http...  2021-11-27   \n",
+       "1568  Mozilla/5.0 (Windows NT 10.0; Win64; x64) Appl...  2021-11-30   \n",
+       "\n",
+       "     month_year        DOW  hour log_name  \n",
+       "1314    11-2021   Saturday    16    tools  \n",
+       "104     11-2021     Sunday     9    tools  \n",
+       "52      02-2022  Wednesday    23    tools  \n",
+       "2049    11-2021   Saturday     4    tools  \n",
+       "1568    11-2021    Tuesday    18    tools  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "parser_tools.df_logs.sample(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "fc3de3d2-9d03-4cd7-acf9-a1cdfadb73e7",
    "metadata": {
     "tags": []
@@ -224,14 +393,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 647/647 [02:11<00:00,  4.93it/s]\n"
+      "100%|██████████| 647/647 [00:12<00:00, 51.11it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Expanding datetime field...\n"
+      "Expanding datetime field...\n",
+      "1.42m to process log files.\n",
+      "CPU times: user 58.1 s, sys: 4.86 s, total: 1min 2s\n",
+      "Wall time: 1min 25s\n"
      ]
     }
    ],
